# milkyway-contracts

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: Basic.yml  Release.yml
contracts/staking/: Cargo.toml  README.md
contracts/staking/src/: ack.rs  contract.rs  error.rs  execute.rs  helpers.rs  ibc.rs  lib.rs  msg.rs  oracle.rs  query.rs  state.rs  tests.rs  types.rs
contracts/staking/src/migrations/: mod.rs  v0_4_19.rs  v0_4_20.rs  v1_0_0.rs  v1_1_0.rs  v1_2_0.rs  v1_3_0.rs
contracts/staking/src/migrations/states/: mod.rs  v0_4_18.rs  v0_4_20.rs  v1_0_0.rs
contracts/staking/src/tests/: circuit_breaker_tests.rs  helper_tests.rs  ibc_transfer_tests.rs  instantiate_tests.rs  migration.rs  milkyway_mock_querier.rs  mod.rs  osmosis_querier.rs  ownership_tests.rs  query_tests.rs  reward_tests.rs  slash_batches.rs  stake_tests.rs  submit_batch_tests.rs  test_helper.rs  unstake_tests.rs  update_config_tests.rs  validator_tests.rs  withdraw_tests.rs
contracts/staking/src/tests/migration/: mod.rs  v1_1_0.rs
contracts/staking/src/tokenfactory/: miniwasm.rs  mod.rs  osmosis.rs
contracts/treasury/: Cargo.toml  NOTICE  README.md
contracts/treasury/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs  types.rs
contracts/treasury/src/migrations/: mod.rs  v1_0_0.rs
contracts/treasury/src/migrations/states/: v0_4_20.rs
contracts/treasury/src/tests/: instantiate_tests.rs  mod.rs  osmosis_querier.rs  ownership_tests.rs  send_tests.rs  swap_tests.rs  test_helper.rs  update_config_test.rs
contracts/treasury/src/tests/migrations/: v1_0_0.rs
deploy/: init_stake_contract_testnet.sh  init_treasury_contract_authz.sh  migrate_stake_contract.sh  migrate_stake_contract_testnet.sh
proxy/: .env  README.md  index.js  networks.js  package.json  pnpm-lock.yaml  polling.js  run.sh  websocket.js
scripts/: .gitignore
scripts/bins/: clients.sh
scripts/deploy/: init_ica_oracle.sh  init_stake_contract.sh  init_stake_contract_testnet.sh  migrate_stake_contract.sh  migrate_stake_contract_testnet.sh  store-contracts.sh  tia-osmo-pool.sh
scripts/js/: package-lock.json  package.json
scripts/testnet/: .dockerignore  Dockerfile  Dockerfile.fast  Local-Testnet.md  check-node-running.sh  fund-accounts.sh  hermes-config.toml  init-stake-contract.sh  init_ica_oracle.sh  init_stake_contract.sh  local-account.sh  local-celestia-testnet-multi-continue.sh  local-celestia-testnet-multi-new.sh  local-hermes-clear-packets.sh  local-hermes-continue.sh  local-hermes-new.sh  local-osmosis-testnet-continue.sh  local-osmosis-testnet-new.sh  migrate_stake_contract.sh  params.sh  pool.json  start-manual.sh  tia-osmo-pool.sh  utils.sh
scripts/testnet/bins/: .gitignore  download.sh  hermes  osmosisd
scripts/testnet/utils/: configure-localnet.sh  import-accounts-keys.sh  tx.sh
scripts/tests/: liquid_stake.sh  liquid_unstake.sh  test_200_batch.sh  test_ibc_receive.sh  tests.sh
scripts/utils/: import-accounts-keys.sh  tx.sh
testsetup/: .gitignore  Dockerfile  Dockerfile.fast  Local-Testnet.md  celestia-relayer-key.json  hermes-config-fast.toml  hermes-config.toml  init_stake_contract.sh  liquid_stake.sh  liquid_unstake.sh  local-account.sh  local-celestia-node.sh  local-celestia-testnet-continue.sh  local-celestia-testnet-multi-continue.sh  local-celestia-testnet-multi-new-fast.sh  local-celestia-testnet-multi-new.sh  local-celestia-testnet-new.sh  local-celestia-testnet.sh  local-hermes-clear-packets.sh  local-hermes-new.sh  local-hermes.sh  local-osmosis-celestia.md  local-osmosis-multinode.sh  local-osmosis-node.sh  local-osmosis-testnet-continue.sh  local-osmosis-testnet-new.sh  local-osmosis-testnet.sh  migrate_stake_contract.sh  osmosis-relayer-key.json  tear-down.sh  test_ibc_receive.sh
testsetup/tests/: liquid_unstake.sh  test_ibc_receive.sh  tests.sh
