[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.4.20"
authors = ["Decento Labs"]
edition = "2021"
rust-version = "1.68.0"
license = "TBD"
homepage = "https://milkyway.zone/"
repository = "https://github.com/decento-labs/milkyway-contracts"
documentation = "https://docs.milkyway.zone/"
keywords = ["cosmwasm", "milkyway", "cosmos"]

[workspace.dependencies]
bech32 = { version = "0.11", features = ["alloc"] }
cosmwasm-schema = "2.2.0"
cosmwasm-std = "2.2.0"
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = "2.2.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
enum-repr = "0.2.6"
osmosis-std = "0.27.0"
prost = "0.13.4"
prost-derive = "0.13.4"
schemars = "0.8.21"
semver = "1.0.24"
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
thiserror = "2.0.8"


[profile.release]
codegen-units = 1
opt-level = 3
rpath = false
debug = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true
