[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.4.20"
authors = ["Decento Labs"]
edition = "2021"
rust-version = "1.68.0"
license = "TBD"
homepage = "https://milkyway.zone/"
repository = "https://github.com/decento-labs/milkyway-contracts"
documentation = "https://docs.milkyway.zone/"
keywords = ["cosmwasm", "milkyway", "cosmos"]

[workspace.dependencies]
bech32 = "0.11.0"
cosmwasm-schema = "1.5.9"
cosmwasm-std = "1.5.9"
cw2 = "1.1.2"
cw-controllers = "1.1.2"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
osmosis-std = "0.25.0"
schemars = "0.8.12"
semver = "1.0.20"
serde = { version = "1.0.155", default-features = false, features = ["derive"] }
thiserror = "1.0.39"

[profile.release]
codegen-units = 1
opt-level = 3
rpath = false
debug = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true
