[package]
name = "staking"
version       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = {version = "1.4.1", features = ["stargate"]}
cw-storage-plus = "1.1.0"
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
osmosis-std = { workspace = true }
cw-controllers = "1.1.1"
cw-utils = { workspace = true }
milky_way = { path = "../../packages/milky_way" }
bech32 = "0.9.1"
bech32-no_std = "0.7.3"
sha2 = "0.10.8"
prost = {version = "0.11.2", default-features = false, features = ["prost-derive"]}
enum-repr = "0.2.6"
prost-derive = "0.12.3"
semver = "1.0.20"

[dev-dependencies]
cw-multi-test = "0.17.0"
