[package]
name = "staking"
version       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
imported = []

[dependencies]
bech32.workspace = true
cw2.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std = { workspace = true, features = ["stargate"]}
cw-controllers.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
enum-repr.workspace = true
milky_way = { path = "../../packages/milky_way" }
osmosis-std.workspace = true
prost = { workspace = true, default-features = false, features = ["prost-derive"] }
prost-derive.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
semver.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
